assets/styles/components/_shape-divider.scss
@import "./../abstracts/variables";
@import "./../layout/grid-columns";

.shape-divider {
	width: 100vw;
	position: relative;
	left: 50%;
	right: 50%;
	margin-left: -50vw;
	margin-right: -50vw;
	overflow-x: hidden;
	line-height: 0;
	z-index: -1;
	&__top {
		@include global-grid-columns-template;
		width: 100%;
		background-color: $primary;
		& > div {
			grid-column-start: 2;
			margin: 50px 0;
		}
	}
	svg {
		display: block;
		width: calc(100% + 1.3px);
		height: 62px;
	}
	.shape-fill {
		fill: $primary;
	}
}

